<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginLeft="@dimen/dimenMediumDP"
    android:layout_marginRight="@dimen/dimenMediumDP"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="Test product"
                android:hint="@string/product_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="Test description"

                android:hint="@string/product_description" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtProductActualPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="23"

                android:inputType="number"
                android:hint="@string/product_actual_price" />
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtProductSalesPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="23"

            android:hint="@string/product_sales_price" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtProductColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:focusableInTouchMode="false"
            android:hint="@string/product_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtSellerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="test seller name"

            android:hint="@string/product_seller_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtSellerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="test address"

            android:hint="@string/product_seller_address" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtSellerMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"

            android:text="909090999"

            android:hint="@string/product_seller_contact_number" />
    </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/select_image"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimenMediumDP"
            />
        <Button android:id="@+id/btnAddProduct"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimenMediumDP"
            android:layout_marginBottom="@dimen/dimenMediumDP"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>